# cmake-test-application

./: .gitmodules  CMakeLists.txt
src/: main.cpp
